--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/netlify": "^5.3.1",
     "@astrojs/node": "^8.3.1",
     "@stripe/stripe-js": "^3.5.0",
     "astro": "^4.10.3",
